Add Elasticsearch connection for actuator endpoints